--- a/pkg/inst/doc/nlstools_vignette.Rnw
+++ b/pkg/inst/doc/nlstools_vignette.Rnw
@@ -219,17 +219,17 @@ plot(boomaf, type="pairs")
 \begin{thebibliography}{1}
 
 \bibitem{Bates}
-Bates~D.M. and Watts~D.G. (1988) Nonlinear regression analysis and its applications. Wiley, Chichester, UK.\\
+Bates, D.M. and Watts, D.G. (1988) Nonlinear regression analysis and its applications. Wiley, Chichester, UK.\\
 
 \bibitem{Beale}
-Beale~E.M.L. (1960) Confidence regions in non-linear estimations. 
+Beale, E.M.L. (1960) Confidence regions in non-linear estimations. 
 \emph{Journal of the Royal Statistical Society}, 22B, 41-88.\\
 
 \bibitem{Seber}
-Seber~G.A.F., Wild~C.J. (1989) Nonlinear regression. Wiley, New York.\\
+Seber, G.A.F., Wild, C.J. (1989) Nonlinear regression. Wiley, New York.\\
 
 \bibitem{Huet}
-Huet~S., Bouvier~A., Poursat~M.A., Jolivet~E. (2003) Statistical tools for nonlinear 
+Huet, S., Bouvier, A., Poursat, M.A., Jolivet, E. (2003) Statistical tools for nonlinear 
 regression: a practical guide with S-PLUS and R examples. Springer, Berlin, Heidelberg, New York.\\
 
 \end{thebibliography}
